--- a/src/main/resources/templates/signUpForm.html
+++ b/src/main/resources/templates/signUpForm.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>회원가입</title>
 </head>
 <body>
-<form th:action="@{/users}" th:object="${user}" th:method="post">
     <table class="table">
         <tbody>
         <tr>
             <td>E-Mail</td>
-            <td><input type="text" th:field="*{email}"></td>
-            <td style="color: red;" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></td>
+            <td><input type="text" id="email"></td>
         </tr>
         <tr>
             <td>Password</td>
-            <td><input type="password" th:field="*{password}"></td>
-            <td style="color: red;" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></td>
+            <td><input type="password" id="password"></td>
         </tr>
         <tr>
             <td>Name</td>
-            <td><input type="text" th:field="*{name}"></td>
-            <td style="color: red;" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></td>
+            <td><input type="text" id="name"></td>
         </tr>
-        <button type="submit">가입하기</button>
+        <tr>
+            <td><button type="button" onclick="join()">가입하기</button></td>
+        </tr>
         </tbody>
     </table>
-</form>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script>
+    const join = () => {
+        let email = document.getElementById("email").value;
+        let password = document.getElementById("password").value;
+        let name = document.getElementById("name").value;
+        let joinUser = {
+            email: email
+            , password: password
+            , name: name
+        }
+        axios.post("/users", joinUser)
+            .then(response => {
+                let resultData = response.data;
+                alert("회원가입 성공 : " + resultData.email);
+            }).catch(e => {
+                let errorData = e.response.data;
+                alert("회원가입 실패 : [" + errorData.code + "] " + errorData.message);
+            });
+
+    }
+</script>
 </body>
 </html>
