refactor : 오타 수정,,

--- a/src/main/resources/templates/viewZoneMap.html
+++ b/src/main/resources/templates/viewZoneMap.html
@@ -35,8 +35,8 @@
     }
 
     const initMap = ({ coords }) => {
-        let latitude = 33.450701; coords.latitude;
-        let longitude = 126.570667; coords.longitude;
+        let latitude = 33.450701;
+        let longitude = 126.570667;
 
         if (coords) {
             latitude = coords.latitude;
