refactor : 차량 타입 MessageSource -> Enum

--- a/src/main/resources/templates/viewZoneMap.html
+++ b/src/main/resources/templates/viewZoneMap.html
@@ -166,7 +166,7 @@
         let $carList = $("#carList");
         $carList.empty();
         carList.forEach((car) => {
-            $carList.append("<li><a class='title'>" + car.model + "</a><p class='subtitle'>" + car.status + "</p><br/>" + car.typeName + "</li>")
+            $carList.append("<li><a class='title'>" + car.model + "</a><p class='subtitle'>" + car.status + "</p><br/>" + car.type + "</li>")
         });
     }
 
