feat : 예약하기 버튼 (UI) 구현

--- a/src/main/resources/templates/viewZoneMap.html
+++ b/src/main/resources/templates/viewZoneMap.html
@@ -162,10 +162,10 @@
             });
     }
 
-    function displayReserveButtonByStatus(status) {
+    function displayReserveButtonByStatus(sharingCarId, status) {
         let reserveButton = "";
         if (status === statusWaiting) {
-            reserveButton = "<a>예약하기</a>";
+            reserveButton = "<a onclick='reserve(" + sharingCarId + ")'>예약하기</a>";
         }
         return reserveButton;
     }
@@ -175,15 +175,56 @@
         let $carList = $("#carList");
         $carList.empty();
         carList.forEach((car) => {
-            let reserveButton = displayReserveButtonByStatus(car.status);
+            let reserveButton = displayReserveButtonByStatus(car.id, car.status);
             $carList.append(
-                "<li>" +
-                    "<a class='title'>" + car.model + "<p style='float: right'>" + car.type +"</p></a>" +
-                    "<p class='subtitle'>" + car.status + "</p><br/>"
+                "<li>"
+                    + "<a class='title'>" + car.model + "<p style='float: right'>" + car.type +"</p></a>"
+                    + "<p class='subtitle'>" + car.status + "</p><br/>"
+                    + "<p style='float: right;'>" + car.price.toLocaleString() + "원</p>"
                     + reserveButton
                 + "</li>"
             )
         });
+    }
+
+    const reserve = (sharingCarId) => {
+        let resStartTime = $("#resStartTime").val();
+        let resEndTime = $("#resEndTime").val();
+        makePayments(sharingCarId).then(paymentId => {
+            let reservationParam = {
+                sharingCarId: sharingCarId,
+                resStartTime: resStartTime,
+                resEndTime: resEndTime,
+                paymentId: paymentId
+            }
+            axios.post("/reservation", reservationParam)
+                .then(response => {
+                    let resultData = response.data;
+                    alert("예약 성공 : " + response.data);
+                }).catch(e => {
+                    let errorData = e.response.data;
+                    alert("예약 실패 : [" + errorData.code + "] " + errorData.message);
+                });
+        })
+    }
+
+    const makePayments = (sharingCarId) => {
+
+        let resStartTime = $("#resStartTime").val();
+        let resEndTime = $("#resEndTime").val();
+        let paymentParam = {
+            sharingCarId: sharingCarId,
+            resStartTime: resStartTime,
+            resEndTime: resEndTime
+        }
+        return axios.post("/payment", paymentParam)
+            .then(response => {
+                let resultData = response.data;
+                return resultData.paymentId;
+            }).catch(e => {
+                let errorData = e.response.data;
+                alert("결제 실패 : [" + errorData.code + "] " + errorData.message);
+            });
     }
 
 </script>
